# Basta

./: CMakeLists.txt  CMakePresets.json  now.pasta
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: guide.md  iana-media-type.txt  iana-registration-guide.md
specs/: Basta.txt
src/main/c/: basta_internal.h  basta_lexer.c  basta_parser.c  basta_value.c  basta_writer.c
src/main/h/: basta.h
src/test/c/: basta_test.c
src/test/resources/: sections.basta  text_only.basta
